--- a/docs_opdracht2/package.json
+++ b/docs_opdracht2/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "ejs": "^3.0.2",
     "express": "^4.17.1",
     "node-fetch": "^2.6.0",
     "nodemon": "^2.0.3",
